# Winter

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
app/: CMakeLists.txt  main.cpp
app/service/: MyService.cpp
app/source/controller/: MyController.cpp  MyController.h
app/source/dto/: AllFieldsVecDTO.h  BaseRequest.h  BaseResponse.h  InnerClass.h
app/source/entity/: PlayerEntity.h
app/source/repository/: PlayerRepository.cpp  PlayerRepository.h
app/source/service/: MyService.cpp  MyService.h
app/template/: Reflect.cpp
include/core/: Component.h  Configuration.h  Router.h  Winter.h
include/http/: ControllerMapping.h  HttpConnection.h  HttpHeader.h  HttpRequest.h  HttpRequestParser.h  HttpResponse.h  HttpServer.h  URI.h  httpConstants.h
include/log/: Appender.h  Logger.h  Loggy.h
include/map/: Mapper.h
include/reflect/: Field.h  Reflect.h
include/serialize/: FieldTypeUtil.h  JsonDeserializer.h  JsonSerializer.h
include/sql/: Connection.h  DbConnection.h  Entity.h  Repository.h  ResultSet.h  Statement.h
include/sql/postgres/: PgConnection.h  PgResultSet.h  PgStatement.h
include/util/: DbConnectionPool.h  stringUtils.h  tsqueue.h  util.h
lib/: CMakeLists.txt
lib/source/core/: Component.cpp  Configuration.cpp  Router.cpp  Winter.cpp
lib/source/http/: HttpConnection.cpp  HttpRequest.cpp  HttpRequestParser.cpp  HttpResponse.cpp  HttpServer.cpp  URI.cpp  httpConstants.cpp
lib/source/http/client/: HttpClient.h
lib/source/log/: Appender.cpp  Logger.cpp  Loggy.cpp
lib/source/map/: Mapper.cpp
lib/source/reflect/: Field.cpp  Method.cpp  Reflect.cpp
lib/source/serialize/: JsonDeserializer.cpp  JsonSerializer.cpp
lib/source/sql/: Entity.cpp  Repository.cpp  Statement.cpp
lib/source/sql/postgres/: PgConnection.cpp  PgResultSet.cpp  PgStatement.cpp
lib/tests/: deserializationTests.h  httpRequestParseTests.h  loggerTests.h  reflectTests.h  runTests.cpp  serializationTests.h  stringUtilsTests.h
lib/tests/dto/: AllFieldsDTO.h  AllFieldsVecDTO.h  BaseRequest.h  BaseResponse.h  InnerClass.h
lib/tests/util/: dtoUtils.h
pre_processor/: PreProcessor.cpp  PreProcessor.h  main.cpp  util.h
pre_processor/pass/: AnnotationPass.cpp  AnnotationPass.h  ComponentPass.cpp  ComponentPass.h  Pass.cpp  Pass.h  ReflectionPass.cpp  ReflectionPass.h
source/: Component.cpp  Component.h  Configuration.cpp  Configuration.h  PreProcessor.cpp  PreProcessor.h  Router.cpp  Router.h  Winter.cpp  Winter.h  main.cpp
source/app/controller/: MyController.cpp  MyController.h
source/app/dto/: BaseRequest.h  BaseResponse.h  InnerClass.h
source/app/entity/: PlayerEntity.h
source/app/repository/: PlayerRepository.cpp  PlayerRepository.h
source/app/service/: MyService.h
source/core/: Component.cpp  Component.h  Configuration.cpp  Configuration.h  Router.cpp  Router.h  Winter.cpp  Winter.h
source/demoApp/controller/: MyController.cpp  MyController.h
source/demoApp/dto/: AllFieldsDTO.h  AllFieldsVecDTO.h  InnerClass.h
source/demoApp/entity/: PlayerEntity.h
source/demoApp/repository/: PlayerRepository.h
source/demoApp/service/: MyService.h
source/http/: Connection.cpp  Connection.h  ControllerMapping.h  HttpBase.cpp  HttpBase.h  HttpConnection.cpp  HttpConnection.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  URI.cpp  URI.h  httpConstants.cpp  httpConstants.h
source/http/client/: HttpClient.cpp  HttpClient.h
source/log/: Appender.cpp  Appender.h  Logger.cpp  Logger.h
source/map/: Mapper.cpp  Mapper.h
source/reflect/: Field.cpp  Field.h  Method.cpp  Method.h  Reflect.cpp  Reflect.h
source/serialize/: FieldEnums.h  FieldTypeEnums.h  FieldTypeUtil.h  JsonDeserializer.cpp  JsonDeserializer.h  JsonSerializer.cpp  JsonSerializer.h
source/sql/: Connection.h  Entity.cpp  Entity.h  Repository.cpp  Repository.h  ResultSet.h  Statement.cpp  Statement.h
source/sql/postgres/: PgConnection.cpp  PgConnection.h  PgPreparedStatement.cpp  PgPreparedStatement.h  PgResultSet.cpp  PgResultSet.h  PgStatement.cpp  PgStatement.h
source/util/: ConnectionPool.h  DbConnectionPool.h  ThreadPool.h  stringUtils.h  tsqueue.h  util.h
temp/: TestClass.cpp  TestClass.h  main.cpp
tests/: deserializationTests.h  httpRequestParseTests.h  loggerTests.h  reflectTests.h  runTests.cpp  serializationTests.h  stringUtilsTests.h
tests/dto/: AllFieldsDTO.h  AllFieldsVecDTO.h  BaseRequest.h  BaseResponse.h  InnerClass.h
tests/util/: dtoUtils.h
tools/pre_processor/: CMakeLists.txt  PreProcessor.cpp  PreProcessor.h  main.cpp  util.h
tools/pre_processor/pass/: AnnotationPass.cpp  AnnotationPass.h  ComponentPass.cpp  ComponentPass.h  Pass.cpp  Pass.h  ReflectionPass.cpp  ReflectionPass.h
